# t15-camping

./: .gitignore  DEPLOY.md  LICENSE  README.md  build-and-push.sh  build.gradle  package.json
.github/workflows/: ci.yml  docker-image.yml  gradle.yml  sha1-hulud.yml  trivy-cache.yml
camping-server/: build.gradle
charts/t15-camping/: Chart.yaml  values.yaml
charts/t15-camping-backend-chart/: Chart.yaml  values.yaml
charts/t15-camping-ui-chart/: Chart.yaml
experiment/node-server/: .env
experiment/server/: config.env  package.json  server.js
helmfile.d/: index.yaml  t15-camping.yaml
helmfile.d/ingress/: ingress.yaml.gotmpl
node-server/: Dockerfile  config.env  package.json  run.js  tsconfig.json
node-server/src/: server.ts
react-ui/src/: CampoutOption.tsx  CampoutSelect.tsx  Event.d.ts  FetchYouth.tsx  Filter.d.ts  HotToggle.tsx  List.tsx  (+7 more)
rust-camping-server/: .gitignore  Cargo.toml  docker-compose.yaml  requests.http
rust-camping-server/src/: main.rs  routes.rs  state.rs  user.rs
server/: package-lock.json
springboot-camping-server/: build.gradle  gradle.properties  settings.gradle
src/: AnnualFeeButton.tsx  AttendedBadge.tsx  CampoutSelect.tsx  Checkbox.tsx  FetchYouth.tsx  HotToggle.tsx  LoginForm.tsx  Navigation.tsx  SyncMenuItem.tsx  User.d.ts  UserList.module.css  UserList.tsx  UserTable.tsx  api.ts  apiToken.ts  baseUrl.ts  cookies.ts
t15-camping-react-ui/: .dockerignore  Dockerfile  package.json  pnpm-lock.yaml
trooptrack-rust/: .gitignore  Cargo.toml  Cargo.toml.bak  README.md  generate.sh  swagger.json  trooptrack-swagger.yaml
(+223 files in other folders)
