[package]
name = "rust-camping-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trooptrack-rust = { path = "../trooptrack-rust" }
dotenv = "^0.15.0"
futures = "^0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
chrono = "^0.4.35"
