[package]
name = "rust-camping-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trooptrack-rust = { path = "../trooptrack-rust" }
dotenv = "^0.15.0"
futures = "^0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
chrono = "^0.4.35"
mongodb = "^2.8.2"
serde = "1.0.197"
serde_json = "1.0.114"
tide = "0.16.0"
femme = "2.2.1"
log = "0.4.21"
bson = "2.9.0"
